Update distances module

--- a/travelingsalesmansolver/BUILD
+++ b/travelingsalesmansolver/BUILD
@@ -1,21 +1,5 @@
 load("//travelingsalesmansolver:variables.bzl", "STDCPP")
 
-cc_library(
-        name = "distances",
-        hdrs = [
-                "distances.hpp",
-                "distances_builder.hpp",
-        ],
-        srcs = [
-                "distances.cpp",
-                "distances_builder.cpp",
-        ],
-        deps = [
-                "@optimizationtools//optimizationtools/utils:utils",
-        ],
-        visibility = ["//visibility:public"],
-)
-
 
 cc_library(
         name = "travelingsalesmansolver",
@@ -29,8 +13,9 @@ cc_library(
                 "solution.cpp",
                 "algorithm_formatter.cpp",
         ],
+        copts = STDCPP,
         deps = [
-                ":distances",
+                "//travelingsalesmansolver/distances:distances",
                 "@optimizationtools//optimizationtools/utils:utils",
                 "@optimizationtools//optimizationtools/containers:containers",
         ],
@@ -45,6 +30,7 @@ cc_binary(
                 "//travelingsalesmansolver/algorithms:concorde",
                 "@boost//:program_options",
         ],
+        copts = STDCPP,
         linkopts = select({
                     "@bazel_tools//src/conditions:windows": [],
                     "//conditions:default":                 ["-lpthread"],
