--- a/travelingsalesmansolver/algorithms/BUILD
+++ b/travelingsalesmansolver/algorithms/BUILD
@@ -1,7 +1,10 @@
+load("//travelingsalesmansolver:variables.bzl", "STDCPP")
+
 cc_library(
         name = "concorde",
         hdrs = ["concorde.hpp"],
         srcs = ["concorde.cpp"],
+        copts = STDCPP,
         deps = ["//travelingsalesmansolver:travelingsalesmansolver"],
         visibility = ["//visibility:public"],
 )
@@ -10,6 +13,7 @@ cc_library(
         name = "lkh",
         hdrs = ["lkh.hpp"],
         srcs = ["lkh.cpp"],
+        copts = STDCPP,
         deps = ["//travelingsalesmansolver:travelingsalesmansolver"],
         visibility = ["//visibility:public"],
 )
