--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -2,21 +2,20 @@
 include(FetchContent)
 
 # Fetch boost.
-set(BOOST_INCLUDE_LIBRARIES thread filesystem system program_options)
+set(BOOST_INCLUDE_LIBRARIES thread filesystem system program_options dynamic_bitset)
 set(BOOST_ENABLE_CMAKE ON)
 include(FetchContent)
 FetchContent_Declare(
-  Boost
-  GIT_REPOSITORY https://github.com/boostorg/boost.git
-  GIT_TAG boost-1.84.0
-  GIT_SHALLOW TRUE
-)
+    Boost
+    URL https://github.com/boostorg/boost/releases/download/boost-1.84.0/boost-1.84.0.tar.xz
+    EXCLUDE_FROM_ALL)
 FetchContent_MakeAvailable(Boost)
 
 # Fetch fontanf/optimizationtools.
 FetchContent_Declare(
     optimizationtools
     GIT_REPOSITORY https://github.com/fontanf/optimizationtools.git
-    GIT_TAG 33a3966ece149d390ec7ce08699669b5267e64aa)
-    #SOURCE_DIR "${PROJECT_SOURCE_DIR}/../optimizationtools/")
+    GIT_TAG a0973a7dfa64b9d305f75879c80d252e714ce2cf
+    #SOURCE_DIR "${PROJECT_SOURCE_DIR}/../optimizationtools/"
+    EXCLUDE_FROM_ALL)
 FetchContent_MakeAvailable(optimizationtools)
